--- a/content/misc/2024_狂飙.md
+++ b/content/misc/2024_狂飙.md
@@ -13,8 +13,7 @@ blueprint: false
 # latex support
 # katex: true
 # markup: mmark
-# mmarktoc: false 
-# UEVersion: 5.3.2 
+# mmarktoc: false # UEVersion: 5.3.2 
 ---
 
 
@@ -29,6 +28,7 @@ blueprint: false
 体检报告还是一如既往的...嗯，好起来了！脂肪肝从中度变成了轻度，体重也有所降低，今年在家里有好好做饭。工作变得可以6点过下班以后，回家还可以顺路买点打折蔬菜做点晚饭，至少在晚饭上整挺好。
 
 六月到九月还陆陆续续跑了一段时间步，九月总共跑了52公里吧，还挺开心的。国庆节摆烂以后随着天气转冷，这个跑步的习惯也没保持下来，不过也没关系，明年再继续。什么时候都不晚。
+
 
 # 聊聊工作
 
@@ -52,3 +52,12 @@ blueprint: false
 今年还有一个比较有乐趣的事情就是有一搭没一搭的学习了一点日语。
 标日学了几节课，五十音勉勉强强， 多邻国保持打卡，不能说有多少进步，但是获得了很多乐子是真的。除了工作以外，人的生活需要寻找一些兴趣爱好来维持对美好生活的感知。
 新的一年先定个小小的目标，把标日初级上下册学完吧！
+
+
+顺带一提，今年读的最满意的一本小说是伊坂幸太郎的《金色梦乡》，在高铁上晃悠晃悠着读完的，读完以后充满了对生活的热爱...
+点开之前是从推理小说的栏目里点进去的，本来以为是会和白夜行一样恶意满满的黑深残故事。
+没想到是一本充满了奇迹和希望的书。(不由得想起了村上春树的《挪》的扉页上写着100%的爱情小说...)
+
+> 迎着阳光盛大逃亡吧！
+
+希望哪一天能用日文再重读一次。
